--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -1356,11 +1356,11 @@
  	 	"logout": {
  	 	 	"cancelAfkConfirmModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "AFK 및 로그 아웃을 취소 하시겠습니까?",
+ 	 	 	 	 	"trans": "오프라인 작업을 취소하고 로그아웃 하시겠습니까?",
  	 	 	 	 	"eng": "Cancel Afk and logout?"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "AFK 및 로그 아웃을 취소 하시겠습니까? 작업을 시작하는 데 사용되는 리소스는 환불되지 않습니다.",
+ 	 	 	 	 	"trans": "정말 오프라인 작업을 취소하고 로그아웃 하시겠습니까? 취소 시 작업에 사용된 자원은 반환되지 않습니다.",
  	 	 	 	 	"eng": "Are you sure you want to cancel your afk and logout? the resource used to start the task will NOT be refunded."
  	 	 	 	}
  	 	 	}
@@ -1406,7 +1406,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "이것은 ${time}을 취할 것입니다",
+ 	 	 	 	"trans": "이 작업은 ${time}만큼의 시간이 소요됩니다.",
  	 	 	 	"eng": "This will take ${time}"
  	 	 	}
  	 	},
@@ -1479,7 +1479,7 @@
  	 	},
  	 	"rewardActionConfirmModal": {
  	 	 	"captcha": {
- 	 	 	 	"trans": "모든 프로세스 아이콘을 빨간색 상자로 드래그하여 작업을 시작합니다",
+ 	 	 	 	"trans": "작업을 시작하기 위해 모든 프로세스 아이콘을 붉은색 사각형에 모두 끌어 놓으십시오.",
  	 	 	 	"eng": "Drag all processes icons into to the red box entirely to initiate the task"
  	 	 	}
  	 	},
@@ -3004,7 +3004,7 @@
  	 	 	"eng": "Prestige"
  	 	},
  	 	"donation7": {
- 	 	 	"trans": "명성",
+ 	 	 	"trans": "프레스티지",
  	 	 	"eng": "Prestige"
  	 	},
  	 	"moderator": {
@@ -3192,7 +3192,7 @@
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "프로필 사진 사용자 정의 잠금 해제",
+ 	 	 	 	 	"trans": "프로필 사진 커스터마이징 가능",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3204,7 +3204,7 @@
  	 	 	 	 	"eng": "Blue Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "맞춤형 자기소개 잠금 해제",
+ 	 	 	 	 	"trans": "맞춤형 자기소개 작성 가능",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -3212,11 +3212,11 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "갱의 모토를 커스터마이징",
+ 	 	 	 	 	"trans": "갱 모토 작성 가능",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "갱의 이미지를 커스터마이징",
+ 	 	 	 	 	"trans": "갱 이미지 업로드 가능",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
@@ -3228,39 +3228,39 @@
  	 	"donation7": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "\"프레스티지\"기부 제목",
+ 	 	 	 	 	"trans": "\"프레스티지\"후원 타이틀",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "프로필 사진 사용자 정의 잠금 해제",
+ 	 	 	 	 	"trans": "프로필 사진 커스터마이징 가능",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "자주색 네온 채팅 프레임 (애니메이션 포함)",
+ 	 	 	 	 	"trans": "퍼플 네온 채팅 프레임 (애니메이션 포함)",
  	 	 	 	 	"eng": "Purple Neon chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "자주색 네온 프레임 프로필 (애니메이션 포함)",
+ 	 	 	 	 	"trans": "퍼플 네온 액자 프로필 (애니메이션 포함)",
  	 	 	 	 	"eng": "Purple Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "사용자 정의 바이오 잠금 해제",
+ 	 	 	 	 	"trans": "맞춤형 자기소개 작성 가능",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "프로필의 바코드 장식",
+ 	 	 	 	 	"trans": "프로필에 바코드 장식",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "갱 모토를 사용자 정의하십시오",
+ 	 	 	 	 	"trans": "갱 모토 작성 가능",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "갱 이미지를 사용자 정의하십시오",
+ 	 	 	 	 	"trans": "갱 이미지 업로드 가능",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "향후 업데이트에 더 많이 올 것입니다",
+ 	 	 	 	 	"trans": "향후 업데이트시 기능 추가 예정",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
