--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -719,18 +719,18 @@
  	 	 	 	"eng": "Unlock Container"
  	 	 	},
  	 	 	"cantOpenContainerNotIdleV2": {
- 	 	 	 	"trans": "지금은 컨테이너를 잠금 해제 할 수 없습니다",
+ 	 	 	 	"trans": "지금은 상자를 열 수 없습니다",
  	 	 	 	"eng": "You cannot unlock containers right now"
  	 	 	},
  	 	 	"openRedEnvelop": {
- 	 	 	 	"trans": "열려 있는",
+ 	 	 	 	"trans": "봉투 뜯기",
  	 	 	 	"eng": "Open"
  	 	 	},
  	 	 	"cannotOpenRedEnvelopNotIdle": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "지금 ${itemName}을 열 수 없습니다",
+ 	 	 	 	"trans": "지금 ${itemName}를 열 수 없습니다",
  	 	 	 	"eng": "You cannot open ${itemName} right now"
  	 	 	}
  	 	},
@@ -1706,7 +1706,7 @@
  	 	},
  	 	"confirmModal": {
  	 	 	"defaultConfirm": {
- 	 	 	 	"trans": "확인하다",
+ 	 	 	 	"trans": "확인",
  	 	 	 	"eng": "Confirm"
  	 	 	}
  	 	},
@@ -2052,15 +2052,15 @@
  	 	},
  	 	"linksPage": {
  	 	 	"title": {
- 	 	 	 	"trans": "연결",
+ 	 	 	 	"trans": "외부 링크",
  	 	 	 	"eng": "Links"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "여기서는 모든 소셜 미디어 링크를 찾아 놀라운 커뮤니티와 연결할 수 있습니다!",
+ 	 	 	 	"trans": "아래에 이 게임의 모든 SNS 링크가 있습니다. 아래의 링크로 들어와 커뮤니티 활동에 참여해 보세요!",
  	 	 	 	"eng": "Here you can find all our social media links, come and connect with the amazing community!"
  	 	 	},
  	 	 	"reportBug": {
- 	 	 	 	"trans": "버그를보고하십시오",
+ 	 	 	 	"trans": "버그 신고하기",
  	 	 	 	"eng": "Report a bug"
  	 	 	}
  	 	},
@@ -2356,7 +2356,7 @@
  	 	 	"vars": [
  	 	 	 	"time"
  	 	 	],
- 	 	 	"trans": "${time}에서 다시 사용할 수 있습니다",
+ 	 	 	"trans": "${time} 뒤에 다시 구매할 수 있습니다.",
  	 	 	"eng": "Available again in ${time}"
  	 	},
  	 	"free": {
@@ -2365,13 +2365,13 @@
  	 	},
  	 	"luna": {
  	 	 	"name": {
- 	 	 	 	"trans": "네온 문 선물",
+ 	 	 	 	"trans": "네온빛 월광 기프트",
  	 	 	 	"eng": "Neon moon gift"
  	 	 	}
  	 	},
  	 	"skip": {
  	 	 	"name": {
- 	 	 	 	"trans": "공급 묶음을 건너 뛰십시오",
+ 	 	 	 	"trans": "오프라인 스킵 패키지",
  	 	 	 	"eng": "Skip supply bundle"
  	 	 	}
  	 	},
@@ -2394,7 +2394,7 @@
  	 	 	 	 	"eng": "Daily"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "하루에 한 번 사용할 수 있습니다",
+ 	 	 	 	 	"trans": "하루에 한 번 구매할 수 있습니다",
  	 	 	 	 	"eng": "Available once a day"
  	 	 	 	}
  	 	 	},
@@ -2404,7 +2404,7 @@
  	 	 	 	 	"eng": "Weekly"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "일주일에 한 번 사용할 수 있습니다",
+ 	 	 	 	 	"trans": "매주 한 번 구매할 수 있습니다",
  	 	 	 	 	"eng": "Available once a week"
  	 	 	 	}
  	 	 	},
@@ -2414,17 +2414,17 @@
  	 	 	 	 	"eng": "Monthly"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "한 달에 한 번 사용할 수 있습니다",
+ 	 	 	 	 	"trans": "한 달에 한 번 구매할 수 있습니다",
  	 	 	 	 	"eng": "Available once a month"
  	 	 	 	}
  	 	 	},
  	 	 	"once": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "한번",
+ 	 	 	 	 	"trans": "한정",
  	 	 	 	 	"eng": "Once"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "계정 당 일회성 특별",
+ 	 	 	 	 	"trans": "계정 당 오직 한 번만 구매할 수 있습니다",
  	 	 	 	 	"eng": "One-time special per account"
  	 	 	 	}
  	 	 	}
@@ -2875,7 +2875,7 @@
  	 	},
  	 	"containerEpicDrop": {
  	 	 	"name": {
- 	 	 	 	"trans": "에픽 획득 확률",
+ 	 	 	 	"trans": "에픽 장비 획득 확률",
  	 	 	 	"eng": "Epic Chance"
  	 	 	}
  	 	},
@@ -2887,7 +2887,7 @@
  	 	},
  	 	"containerLegendaryDrop": {
  	 	 	"name": {
- 	 	 	 	"trans": "전설적인 기회",
+ 	 	 	 	"trans": "전설 장비 획득 확률",
  	 	 	 	"eng": "Legendary Chance"
  	 	 	}
  	 	},
@@ -3576,7 +3576,7 @@
  	 	 	"eng": "Prestige"
  	 	},
  	 	"donation9": {
- 	 	 	"trans": "프레스티지",
+ 	 	 	"trans": "사이버-버니",
  	 	 	"eng": "CyberBunny"
  	 	},
  	 	"donation10": {
@@ -3596,11 +3596,11 @@
  	 	 	"eng": "CyberFrost"
  	 	},
  	 	"donation14": {
- 	 	 	"trans": "사이버 드래곤",
+ 	 	 	"trans": "사이버-드래곤",
  	 	 	"eng": "Cyberdragon"
  	 	},
  	 	"donation15": {
- 	 	 	"trans": "명성",
+ 	 	 	"trans": "프레스티지",
  	 	 	"eng": "Prestige"
  	 	},
  	 	"moderator": {
@@ -3908,7 +3908,7 @@
  	 	"donation9": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "\"프레스티지\"후원 타이틀",
+ 	 	 	 	 	"trans": "\"사이버-버니\"후원 타이틀",
  	 	 	 	 	"eng": "\"CyberBunny\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -4108,23 +4108,23 @@
  	 	"donation14": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "\"사이버 드래곤\"기부 제목",
+ 	 	 	 	 	"trans": "\"사이버-드래곤\"후원 타이틀",
  	 	 	 	 	"eng": "\"Cyberdragon\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "프로필 사진 사용자 정의 잠금 해제",
+ 	 	 	 	 	"trans": "프로필 사진 커스터마이징 가능",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "음력 새해 채팅 프레임 (애니메이션 포함)",
+ 	 	 	 	 	"trans": "설날 채팅 프레임 (애니메이션 포함)",
  	 	 	 	 	"eng": "Lunar new year chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "음력 새해 프레임 프로필 (애니메이션 포함)",
+ 	 	 	 	 	"trans": "설날 프레임 프로필 (애니메이션 포함)",
  	 	 	 	 	"eng": "Lunar new year Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "사용자 정의 바이오 잠금 해제",
+ 	 	 	 	 	"trans": "맞춤형 자기소개 작성 가능",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -4132,15 +4132,15 @@
  	 	 	 	 	"eng": "Dragon decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "갱 모토를 사용자 정의하십시오",
+ 	 	 	 	 	"trans": "갱 모토 작성 가능",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "갱 이미지를 사용자 정의하십시오",
+ 	 	 	 	 	"trans": "갱 이미지 업로드 가능",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "향후 업데이트에 더 많이 올 것입니다",
+ 	 	 	 	 	"trans": "향후 업데이트시 기능 추가 예정",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -4148,11 +4148,11 @@
  	 	"donation15": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "\"프레스티지\"기부 제목",
+ 	 	 	 	 	"trans": "\"프레스티지\"후원 타이틀",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "프로필 사진 사용자 정의 잠금 해제",
+ 	 	 	 	 	"trans": "프로필 사진 커스터마이징 가능",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -4164,7 +4164,7 @@
  	 	 	 	 	"eng": "Neon green Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "사용자 정의 바이오 잠금 해제",
+ 	 	 	 	 	"trans": "맞춤형 자기소개 작성 가능",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -4172,15 +4172,15 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "갱 모토를 사용자 정의하십시오",
+ 	 	 	 	 	"trans": "갱 모토 작성 가능",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "갱 이미지를 사용자 정의하십시오",
+ 	 	 	 	 	"trans": "갱 이미지 업로드 가능",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "향후 업데이트에 더 많이 올 것입니다",
+ 	 	 	 	 	"trans": "향후 업데이트시 기능 추가 예정",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -4255,7 +4255,7 @@
  	"item": {
  	 	"unknownEquipment": {
  	 	 	"name": {
- 	 	 	 	"trans": "알 수없는 장비",
+ 	 	 	 	"trans": "무작위 장비",
  	 	 	 	"eng": "Unknown Equipment"
  	 	 	}
  	 	},
@@ -5014,7 +5014,7 @@
  	 	 	 	"eng": "Red Envelope"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "황금 디지털 씰이있는 빨간 봉투. 그것은 일종의 통화를 포함하는 것 같습니다",
+ 	 	 	 	"trans": "황금색의 디지털 장식이 있는 빨간 봉투. 안에는 어느 정도의 돈이 들어있는 것 같습니다.",
  	 	 	 	"eng": "A red envelope with a golden digital seal on it. looks like it contains some sort of currency"
  	 	 	}
  	 	},
@@ -5024,7 +5024,7 @@
  	 	 	 	"eng": "Golden Coin"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "용을 조각 한 황금 동전. 물리적 통화는 요즘 보는 것이 매우 드 rare니다. 시장 지구에서 좋은 것을 살 수 있어야합니다",
+ 	 	 	 	"trans": "용이 새겨진 황금 동전. 요새는 보기 힘든 현물 돈입니다. 분명 시장에 가면 좋은 걸 살 수 있겠죠?",
  	 	 	 	"eng": "A golden coin with a engraving of a dragon on it. physical currency is very rare to see these days, should be able to buy something good with it in the market district"
  	 	 	}
  	 	},
@@ -5050,20 +5050,20 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "끈적 끈적하고 달콤한 쌀 케이크는 전통적인 음력 새해 음식이며 행운과 번영을 가져 오는 것으로 여겨집니다. \\ n 소비시 회수 ${percent}% 방패",
+ 	 	 	 	"trans": "찐득하고 달콤한 떡은 전통적인 설날 음식입니다. 소문에 의하면 떡은 운과 성공을 가져다준다고 하네요. 섭취 시 방어막의 ${percent}%만큼을 수복합니다.",
  	 	 	 	"eng": "sticky and sweet rice cake is a traditional Lunar New Year food and is believed to bring good luck and prosperity.\\n recover ${percent}% shield upon consumption"
  	 	 	}
  	 	},
  	 	"sushi": {
  	 	 	"name": {
- 	 	 	 	"trans": "회",
+ 	 	 	 	"trans": "초밥",
  	 	 	 	"eng": "Sushi"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "엔의 사랑과 보살핌으로 만들어졌습니다. 플레이어에게 부여하는 맛있고 영양이 풍부한 식사 -${percent}% 식사를 20 분 동안 섭취 한 피해. 어려운 도전을 다루고 어려운 적을 정복하는 데 적합한 엔 \\의 초밥은 모든 모험가에게 있어야합니다.",
+ 	 	 	 	"trans": "엔이 사랑과 정성을 담아 만든 초밥 도시락입니다. 맛있고 든든한 한끼 식사죠! 섭취 시 20분동안 받는 데미지를 -${percent}% 줄여줍니다. 강한 적에게 도전하고 이기기 위한 모험가에게는 완벽한 필수템입니다.",
  	 	 	 	"eng": "Made with love and care by Yen. delicious and nourishing meal that will grant the player -${percent}% damage taken for 20 minutes when eaten. Perfect for tackling tough challenges and conquering difficult foes, Yen\\'s sushi is a must - have for any adventurer."
  	 	 	}
  	 	},
@@ -5119,7 +5119,7 @@
  	 	}
  	},
  	"foodUseVerb": {
- 	 	"trans": "소비하다",
+ 	 	"trans": "먹기",
  	 	"eng": "Consume"
  	},
  	"levelType": {
@@ -5660,14 +5660,14 @@
  	 	"lunar": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Welcome, our family is always excited to help you find the perfect tech gear."
+ 	 	 	 	 	"어서오세요, 최고의 장비를 찾을 수 있게 저희 가족이 도와드릴게요."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Welcome, our family is always excited to help you find the perfect tech gear."
  	 	 	 	]
  	 	 	},
  	 	 	"name": {
- 	 	 	 	"trans": "엔의 코너 스토어",
+ 	 	 	 	"trans": "엔의 구멍가게",
  	 	 	 	"eng": "Yen's Corner Store"
  	 	 	},
  	 	 	"npcName": {
@@ -6662,14 +6662,14 @@
  	 	 	"vars": [
  	 	 	 	"itemName"
  	 	 	],
- 	 	 	"trans": "이 항목을 구매하기에 ${itemName}가 충분하지 않습니다",
+ 	 	 	"trans": "${itemName}가 부족해 이 아이템을 구매할 수 없습니다.",
  	 	 	"eng": "You have no enough ${itemName} to purchase this item"
  	 	},
  	 	"noEnoughMoney": {
  	 	 	"vars": [
  	 	 	 	"CURRENCY"
  	 	 	],
- 	 	 	"trans": "이 물건을 구입하기 위한 ${CURRENCY}(이)가 충분하지 않습니다",
+ 	 	 	"trans": "충분한 ${CURRENCY}(이)가 없어 이 아이템을 구매할 수 없습니다.",
  	 	 	"eng": "You do not have enough ${CURRENCY} to purchase this item"
  	 	},
  	 	"slider": {
@@ -6698,7 +6698,7 @@
  	 	 	 	 	"amount",
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "총 : ${amount} ${itemName}",
+ 	 	 	 	"trans": "총합 : ${amount} ${itemName}",
  	 	 	 	"eng": "Total: ${amount} ${itemName}"
  	 	 	}
  	 	}
@@ -7034,23 +7034,23 @@
  	},
  	"bundleDetailsModal": {
  	 	"bundle": {
- 	 	 	"trans": "묶음",
+ 	 	 	"trans": "패키지",
  	 	 	"eng": "bundle"
  	 	},
  	 	"description": {
- 	 	 	"trans": "포함",
+ 	 	 	"trans": "구성품",
  	 	 	"eng": "Contains"
  	 	},
  	 	"alreadyPurchased": {
  	 	 	"vars": [
  	 	 	 	"time"
  	 	 	],
- 	 	 	"trans": "${time}에서 다시 사용할 수 있습니다",
+ 	 	 	"trans": "${time} 후에 다시 구매할 수 있습니다",
  	 	 	"eng": "Available again in ${time}"
  	 	},
  	 	"freeButton": {
  	 	 	"text": {
- 	 	 	 	"trans": "무료로 청구합니다",
+ 	 	 	 	"trans": "무료로 받아가기",
  	 	 	 	"eng": "Claim for free"
  	 	 	}
  	 	},
@@ -7145,7 +7145,7 @@
  	 	 	"eng": "Happy Lunar New year!"
  	 	},
  	 	"desc1": {
- 	 	 	"trans": "음력 새해가 여기에 있으며, 우리는 Shang-Ri-La에서 특별 행사와 함께 축하합니다. 우리가 전통, 기쁨, 공생으로 가득 찬 새해의 시작을 받아 들일 때 우리와 함께하십시오.",
+ 	 	 	"trans": "새해가 오고, 까치 설날도 오고 있습니다! 그래서 샹그릴라에서 특별 행사를 준비했습니다. 전통, 기쁨, 공존으로 가득찰 새해의 시작을 같이 만끽해보세요.",
  	 	 	"eng": "The lunar new year is here, and we're celebrating in Shang-ri-la with a special event. Join us as we embrace the start of a new year, filled with traditions, joy, and togetherness."
  	 	},
  	 	"desc2": {
@@ -7155,7 +7155,7 @@
  	 	 	 	"llcName",
  	 	 	 	"npcName"
  	 	 	],
- 	 	 	"trans": "${npcShopName}은 이제 비즈니스를 위해 열려 있습니다! ${coinItem}을 사용하여 ${npcName}에서 다양한 특수 요리와 ${llcName}를 구매할 수 있습니다!",
+ 	 	 	"trans": "${npcShopName}이 가게를 열었습니다! ${coinItem}을 주고 ${npcName}에서 다양한 특수 요리와 ${llcName}를 구매할 수 있습니다!",
  	 	 	"eng": "${npcShopName} is now open for business! You can use ${coinItem} to purchase various special cuisines and ${llcName} from ${npcName}!"
  	 	},
  	 	"desc3": {
@@ -7163,7 +7163,7 @@
  	 	 	 	"envelopItem",
  	 	 	 	"coinItem"
  	 	 	],
- 	 	 	"trans": "${envelopItem}이 관여하지 않으면 새해가 아닙니다! 적과 AI Core Auto Farm은 ${envelopItem}를 떨어 뜨리고, ${coinItem}의 임의 금액을 받기 위해 열립니다!",
+ 	 	 	"trans": "${envelopItem} 없이는 설날이라 부를 수 없죠! 전투와 자동 사냥에서 ${envelopItem}를 획득할 수 있으며, 봉투를 열어 랜덤한 양의 ${coinItem}을 얻어보세요!",
  	 	 	"eng": "It's not new year if ${envelopItem} is not involved! Enemies and AI Core auto farm will drop ${envelopItem}, open them to receive random amount of ${coinItem}!"
  	 	},
  	 	"desc4": {
@@ -7171,11 +7171,11 @@
  	 	 	 	"envelopItem",
  	 	 	 	"npcShop"
  	 	 	],
- 	 	 	"trans": "이제 매일 ${npcShop}에서 3 개의 무료 ${envelopItem}를받을 수 있습니다!",
+ 	 	 	"trans": "이제 매일 ${npcShop}에서 무료로 ${envelopItem}를 3개 받을 수 있습니다!",
  	 	 	"eng": "You can now receive 3 free ${envelopItem} in ${npcShop} every day!"
  	 	},
  	 	"desc5": {
- 	 	 	"trans": "두 개의 새로운 시간 제한 채팅 프레임과 엠블럼이 추가되었으며 이벤트 기간 동안 만 구매할 수 있습니다.",
+ 	 	 	"trans": "두 개의 새로운 한정 채팅 프레임과 엠블럼이 추가되었으며, 이벤트 기간 동안만 구매할 수 있습니다.",
  	 	 	"eng": "Added two new time limited chat frame and emblems, only purchasable during event period."
  	 	}
  	},
